--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -10,3 +10,34 @@ author_profile: true
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
+
+<html>
+<head>
+  <meta content="text/html; charset=ISO-8859-1"
+ http-equiv="content-type">
+  <title>Teaching</title>
+</head>
+<body>
+
+2021-2022 Academic Year:<br>
+
+Teaching Assistant, 2021 Fall, Hong Kong Baptist University, <b>COMP7015 Artificial Intelligence</b> (Postgraduate)<br>
+
+<br>
+
+2020-2021 Academic Year:<br>
+
+Teaching Assistant, 2021 Spring, Hong Kong Baptist University, <b>COMP7780 Special Topics in Knowledge & Info Mgnt</b> (Postgraduate)<br>
+
+Teaching Assistant, 2020 Fall, Hong Kong Baptist University, <b>COMP7015 Artificial Intelligence</b> (Postgraduate)<br>
+
+<br>
+
+2019-2020 Academic Year:<br>
+
+Teaching Assistant, 2020 Spring, Hong Kong Baptist University, <b>COMP7820 & COMP4125 Visual Analytics & Decision Support</b> (Postgraduate&Undergraduate)<br>
+
+Teaching Assistant, 2019 Fall, Hong Kong Baptist University, <b>COMP7015 Artificial Intelligence</b> (Postgraduate)<br>
+
+</body>
+</html>
