--- a/talkmap/map.html
+++ b/talkmap/map.html
@@ -13,6 +13,7 @@
     	<link rel="stylesheet" href="leaflet_dist/MarkerCluster.Default.css" />
     	<script src="leaflet_dist/leaflet.markercluster-src.js"></script>
     	<script src="org-locations.js"></script>
+        <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=F4H_asxORlgrmhp5Jm5UZkc-1HAE8q85yaTiP4A5fyk"></script>
 
     </head>
     <body>
@@ -40,6 +41,6 @@
     		map.addLayer(markers);
     		map.zoomIn();
     	</script>
-    </body>
+        </body>
     </html>
     
